--- a/index.css
+++ b/index.css
@@ -2,6 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font: Arial, Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+a:hover {
+  color: #288ad6;
 }
 
 .app {
@@ -40,19 +49,157 @@
 }
 
 .bar-top {
+  display: flex;
   height: 380px;
 }
 
 .homebanner {
+  display: flex;
+  flex-direction: column;
   width: 840px;
   height: 100%;
-  padding: 16px 8px 0 0;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 16px 8px 8px 0;
+}
+.homebanner-slide {
+  width: 830px;
+  height: 300px;
+  padding-bottom: 8px;
+}
+.homebanner-slide > img {
+  width: 100%;
+  height: 100%;
+}
+.homebanner-control {
+  display: flex;
+  height: 100%;
+}
+.homebanner-control-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+  border: 1px solid #f1f1f1;
 }
 
 .preorder-hot {
   width: 360px;
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 16px;
+}
+
+.img {
+  width: 50%;
+  height: 50%;
+  padding: 0 0 8px 8px;
+}
+.img > img {
+  height: 100%;
+  width: 100%;
+}
+
+.sub-banner {
+  margin-top: 16px;
+  height: auto;
+  background-color: #FFBF00;
+}
+.sub-banner-prd-promo-banner > img {
+  width: 100%;
+}
+.sub-banner-prd-promo-list-product {
+  display: flex;
+  background-color: #FFBF00;
+}
+.sub-banner-read-more {
+  display: flex;
+  width: 100%;
+  padding: 8px 0;
+  justify-content: center;
+}
+.sub-banner-read-more-btn {
+  padding: 8px 16px;
+  background-color: white;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+}
+
+.item {
+  height: 476px;
+  margin-right: 8px;
+  padding: 8px 16px;
+  background-color: white;
+  border-radius: 4px;
+}
+.item:first-of-type {
+  margin-left: 8px;
+}
+.item-text {
+  background-color: #f1f1f1;
+  width: fit-content;
+  padding: 2px;
+  border-radius: 4px;
+}
+.item-img {
+  margin-top: 32px;
+}
+.item-img > img {
+  width: 100%;
+}
+.item-name {
+  font-weight: bolder;
+  margin-top: 8px;
+}
+.item-price {
+  margin-top: 8px;
+}
+.item-gift {
+  margin-top: 8px;
+}
+
+.box-common {
+  margin-top: 64px;
+}
+.box-common-top {
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+.box-common-top-title {
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 1.5em;
+}
+.box-common-top-link {
+  display: flex;
+  align-items: center;
+}
+.box-common-top-link-item {
+  padding: 8px 16px;
+  border: 1px solid #f1f1f1;
+  border-radius: 999em;
+}
+.box-common-top-link-item + .box-common-top-link-item {
+  margin-left: 8px;
+}
+.box-common-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 476px 476px 476px;
+  gap: 0;
+  border-top: 1px solid #f1f1f1;
+  border-left: 1px solid #f1f1f1;
+}
+.box-common-main > .item {
+  margin: 0;
+  border-radius: 0;
+  border-bottom: 1px solid #f1f1f1;
+  border-right: 1px solid #f1f1f1;
+}
+.box-common-main > .item:hover {
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.12);
+  z-index: 1;
 }
 
 /*# sourceMappingURL=index.css.map */
