--- a/index.scss
+++ b/index.scss
@@ -3,6 +3,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font: Arial,Helvetica,sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+    &:hover {
+        color: #288ad6;
+    }
 }
 
 // app
@@ -48,19 +57,171 @@
 
 // bar-top
 .bar-top {
+    display: flex;
     height: 380px;
 }
 
 // homebanner
 .homebanner {
+    display: flex;
+    flex-direction: column;
     width: 840px;
     height: 100%;
-    padding: 16px 8px 0 0;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 16px 8px 8px 0;
+    &-slide {
+        width: 830px;
+        height: 300px;
+        padding-bottom: 8px;
+        // background-color: yellow;
+        & > img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    &-control {
+        display: flex;
+        height: 100%;
+        &-item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 25%;
+            border: 1px solid #f1f1f1;
+        }
+    }
 }
+
+
+
+
 
 // pre order hot
 .preorder-hot {
     width: 360px;
     height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 16px;
+}
+
+.img {
+    width: 50%;
+    height: 50%;
+    padding: 0 0 8px 8px;
+    
+    &> img {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+// sub banner
+.sub-banner {
+    margin-top: 16px;
+    height: auto;
+    background-color: #FFBF00;
+    &-prd-promo-banner {
+        & > img {
+            width: 100%;
+        }
+    }
+    &-prd-promo-list-product {
+        display: flex;
+        background-color: #FFBF00;
+    }
+    &-read-more {
+        display: flex;
+        width: 100%;
+        padding: 8px 0;
+        justify-content: center;
+        &-btn {
+            padding: 8px 16px;
+            background-color: white;
+            border: none;
+            outline: none;
+            border-radius: 4px;
+        }
+    }
+}
+
+// item
+.item {
+    height: 476px;
+    // width: calc(1200px / 4);
+    margin-right: 8px;
+    padding: 8px 16px;
+    background-color: white;
+    border-radius: 4px;
+    &:first-of-type {
+        margin-left: 8px;
+    }
+    &-text {
+        background-color: #f1f1f1;
+        width: fit-content;
+        padding: 2px;
+        border-radius: 4px;
+    }
+    &-img {
+        margin-top: 32px;
+        & > img {
+            width: 100%;
+        }
+    }
+    &-name {
+        font-weight: bolder;
+        margin-top: 8px;
+    }
+    &-price {
+        margin-top: 8px;
+    }
+    &-gift {
+        margin-top: 8px;
+    }
+}
+
+// box common
+.box-common {
+    margin-top: 64px;
+    &-top {
+        margin-bottom: 16px;
+        display: flex;
+        justify-content: space-between;
+        &-title {
+            text-transform: uppercase;
+            font-weight: bolder;
+            font-size: 1.5em;
+        }
+        &-link {
+            display: flex;
+            align-items: center;
+            &-item {
+                padding: 8px 16px;
+                border: 1px solid #f1f1f1;
+                border-radius: 999em;
+            }
+
+            &-item + &-item {
+                margin-left: 8px;
+            }
+        }
+    }
+    &-main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 476px 476px 476px;
+        gap: 0;
+        border-top: 1px solid #f1f1f1;
+        border-left: 1px solid #f1f1f1;
+        & > .item {
+            margin: 0;
+            border-radius: 0;
+            border-bottom: 1px solid #f1f1f1;
+            border-right: 1px solid #f1f1f1;
+            
+            &:hover {
+                box-shadow: 0 2px 12px rgb(0 0 0 / 12%);
+                z-index: 1;
+            }
+        }
+    }
 }
