--- a/index.scss
+++ b/index.scss
@@ -3,12 +3,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: Arial,Helvetica,sans-serif;
+    font: Arial, Helvetica, sans-serif;
 }
 
 a {
     text-decoration: none;
     color: #333;
+
     &:hover {
         color: #288ad6;
     }
@@ -22,6 +23,7 @@ a {
 // head
 .head {
     width: 100%;
+    color: black;
 
     &-top {
         display: flex;
@@ -30,15 +32,73 @@ a {
         height: 44px;
         background-color: rgb(255, 227, 0);
         padding: 0 calc((100% - 1200px) / 2);
+
+        &>img {
+            height: 100%;
+            width: 100%;
+        }
     }
 
     &-middle {
         display: flex;
         align-items: center;
         height: 40px;
-        background-color: #000;
+        background-color: white;
         padding: 0 calc((100% - 1200px) / 2);
-        color: white;
+        font-size: calc(1em - 2.4px);
+    }
+
+    &-icon {
+        height: 70%;
+        margin-right: 16px;
+
+        &>img {
+            height: 100%;
+        }
+    }
+
+    &-address {
+        margin-right: 16px;
+
+        &>p {
+            color: #fed100;
+        }
+    }
+
+    &-input-search {
+        display: flex;
+        align-items: center;
+        border-radius: 4px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 8px;
+        margin-right: 16px;
+
+        &>input {
+            outline: none;
+            border: none;
+        }
+
+        &-icon {
+            display: flex;
+            justify-content: center;
+            color: black;
+        }
+    }
+
+    &-cart {
+        padding: 8px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 4px;
+        margin-right: 16px;
+        ;
+
+        &:hover {
+            opacity: 0.5;
+        }
+
+        &>i {
+            margin-right: 8px;
+        }
     }
 
     &-bottom {
@@ -47,6 +107,19 @@ a {
         height: 43px;
         background-color: #fed100;
         padding: 0 calc((100% - 1200px) / 2);
+    }
+
+    &-menu {
+        display: flex;
+
+        &-item {
+            width: calc(1200px / 10);
+            text-align: center;
+
+            &>i {
+                margin-right: 4px;
+            }
+        }
     }
 }
 
@@ -68,19 +141,23 @@ a {
     width: 840px;
     height: 100%;
     padding: 16px 8px 8px 0;
+
     &-slide {
         width: 830px;
         height: 300px;
         padding-bottom: 8px;
+
         // background-color: yellow;
-        & > img {
+        &>img {
             width: 100%;
             height: 100%;
         }
     }
+
     &-control {
         display: flex;
         height: 100%;
+
         &-item {
             display: flex;
             justify-content: center;
@@ -108,8 +185,8 @@ a {
     width: 50%;
     height: 50%;
     padding: 0 0 8px 8px;
-    
-    &> img {
+
+    &>img {
         height: 100%;
         width: 100%;
     }
@@ -120,20 +197,24 @@ a {
     margin-top: 16px;
     height: auto;
     background-color: #FFBF00;
+
     &-prd-promo-banner {
-        & > img {
+        &>img {
             width: 100%;
         }
     }
+
     &-prd-promo-list-product {
         display: flex;
         background-color: #FFBF00;
     }
+
     &-read-more {
         display: flex;
         width: 100%;
         padding: 8px 0;
         justify-content: center;
+
         &-btn {
             padding: 8px 16px;
             background-color: white;
@@ -152,35 +233,43 @@ a {
     padding: 8px 16px;
     background-color: white;
     border-radius: 4px;
+
     &:hover {
         .item-img {
             transform: translateY(-16px);
             transition: all 0.5s ease-in-out;
         }
     }
+
     &:first-of-type {
         margin-left: 8px;
     }
+
     &-text {
         background-color: #f1f1f1;
         width: fit-content;
         padding: 2px;
         border-radius: 4px;
     }
+
     &-img {
         margin-top: 32px;
         transition: all 0.5s linear;
-        & > img {
+
+        &>img {
             width: 100%;
         }
     }
+
     &-name {
         font-weight: bolder;
         margin-top: 8px;
     }
+
     &-price {
         margin-top: 8px;
     }
+
     &-gift {
         margin-top: 8px;
     }
@@ -189,34 +278,40 @@ a {
 // box common
 .box-common {
     margin-top: 64px;
+
     &-flex {
-        & > .box-common-main {
+        &>.box-common-main {
             display: flex;
         }
     }
+
     &-top {
         margin-bottom: 16px;
         display: flex;
         justify-content: space-between;
+
         &-title {
             text-transform: uppercase;
             font-weight: bolder;
             font-size: 1.5em;
         }
+
         &-link {
             display: flex;
             align-items: center;
+
             &-item {
                 padding: 8px 16px;
                 border: 1px solid #f1f1f1;
                 border-radius: 999em;
             }
 
-            &-item + &-item {
+            &-item+&-item {
                 margin-left: 8px;
             }
         }
     }
+
     &-main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -224,16 +319,70 @@ a {
         gap: 0;
         border-top: 1px solid #f1f1f1;
         border-left: 1px solid #f1f1f1;
-        & > .item {
+
+        &>.item {
             margin: 0;
             border-radius: 0;
             border-bottom: 1px solid #f1f1f1;
             border-right: 1px solid #f1f1f1;
-            
+
             &:hover {
                 box-shadow: 0 2px 12px rgb(0 0 0 / 12%);
                 z-index: 1;
             }
+        }
+    }
+}
+
+// product new
+.product-news {
+    margin-top: 64px;
+
+    &-title {
+        text-transform: uppercase;
+        font-weight: bolder;
+        font-size: 1.5em;
+        margin-bottom: 16px;
+    }
+
+    &-slider {
+        display: flex;
+    }
+}
+
+.item-new {
+    width: calc(1200px / 3);
+
+    &>img {
+        height: 214px;
+        width: 100%;
+    }
+
+    &+.item-new {
+        margin-left: 16px;
+    }
+}
+
+// footer
+.footer {
+    display: flex;
+    padding: 0 calc((100% - 1200px) / 2);
+    border-top: 1px solid #f1f1f1;
+    background-color: #f1f1f1;
+
+    &-list {
+        width: calc(1200px / 3);
+        &-item {
+            padding: 4px;
+            border: 1px solid white;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 16px 0;
+        }
+        & + .footer-list {
+            margin-left: 16px;
         }
     }
 }
