--- a/index.css
+++ b/index.css
@@ -14,6 +14,29 @@ a:hover {
 }
 
 .app {
+  position: relative;
+  width: 100%;
+}
+
+.banner-left {
+  position: fixed;
+  top: 50%;
+  left: calc((100% - 1200px) / 4);
+  transform: translateY(-50%) translateX(-50%);
+}
+.banner-left > img {
+  height: 100%;
+  width: 100%;
+}
+
+.banner-right {
+  position: fixed;
+  top: 50%;
+  right: calc((100% - 1200px) / 4);
+  transform: translateY(-50%) translateX(50%);
+}
+.banner-right > img {
+  height: 100%;
   width: 100%;
 }
 
