--- a/index.css
+++ b/index.css
@@ -171,21 +171,35 @@ a:hover {
   width: 830px;
   height: 300px;
   padding-bottom: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px 4px 0 0;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 .homebanner-slide > img {
   width: 100%;
   height: 100%;
+  border-radius: inherit;
 }
 .homebanner-control {
   display: flex;
   height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .homebanner-control-item {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 25%;
-  border: 1px solid #f1f1f1;
+}
+.homebanner-control-item.active {
+  box-shadow: 0 4px #fed100 inset;
+  font-weight: bolder;
+}
+.homebanner-control-item + .homebanner-control-item {
+  border-left: 1px solid #f1f1f1;
 }
 
 .preorder-hot {
@@ -208,7 +222,13 @@ a:hover {
 
 .sub-banner {
   margin-top: 16px;
-  height: auto;
+  height: fit-content;
+  border-radius: 4px;
+}
+.sub-banner > img {
+  border-radius: inherit;
+}
+.sub-banner-prd-promo {
   background-color: #FFBF00;
 }
 .sub-banner-prd-promo-banner > img {
