--- a/index.scss
+++ b/index.scss
@@ -133,7 +133,7 @@ a {
         right: calc((100% - 1200px) / 2);
         height: 100%;
         // border-left: 1px solid rgba(0, 0, 0, 0.5);
-        
+
         &-item {
             display: flex;
             justify-content: center;
@@ -141,6 +141,7 @@ a {
             padding: 0 16px;
             border-left: 1px solid rgba(0, 0, 0, 0.1);
             height: 100%;
+
             &:hover {
                 color: #fed100;
             }
@@ -202,24 +203,37 @@ a {
         width: 830px;
         height: 300px;
         padding-bottom: 8px;
-
-        // background-color: yellow;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 4px 4px 0 0;
+        box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+        
         &>img {
             width: 100%;
             height: 100%;
+            border-radius: inherit;
         }
     }
 
     &-control {
         display: flex;
         height: 100%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-top: none;
+        border-radius: 0 0 4px 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
         &-item {
             display: flex;
             justify-content: center;
             align-items: center;
             width: 25%;
-            border: 1px solid #f1f1f1;
+            &.active {
+                box-shadow: 0 4px #fed100 inset;
+                font-weight: bolder;
+            }
+        }
+        &-item + &-item {
+            border-left: 1px solid #f1f1f1;
         }
     }
 }
@@ -251,10 +265,18 @@ a {
 // sub banner
 .sub-banner {
     margin-top: 16px;
-    height: auto;
-    background-color: #FFBF00;
+    height: fit-content;
+    border-radius: 4px;
+    & > img {
+        border-radius: inherit;
+    }
+
+    &-prd-promo {
+        background-color: #FFBF00;
+    }
 
     &-prd-promo-banner {
+
         &>img {
             width: 100%;
         }
