--- a/index.scss
+++ b/index.scss
@@ -206,7 +206,7 @@ a {
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-radius: 4px 4px 0 0;
         box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-        
+
         &>img {
             width: 100%;
             height: 100%;
@@ -227,12 +227,14 @@ a {
             justify-content: center;
             align-items: center;
             width: 25%;
+
             &.active {
                 box-shadow: 0 4px #fed100 inset;
                 font-weight: bolder;
             }
         }
-        &-item + &-item {
+
+        &-item+&-item {
             border-left: 1px solid #f1f1f1;
         }
     }
@@ -267,7 +269,8 @@ a {
     margin-top: 16px;
     height: fit-content;
     border-radius: 4px;
-    & > img {
+
+    &>img {
         border-radius: inherit;
     }
 
@@ -315,7 +318,7 @@ a {
     &:hover {
         .item-img {
             transform: translateY(-16px);
-            transition: all 0.5s ease-in-out;
+            webkit-transition: all 300ms ease-in-out;
         }
     }
 
@@ -332,7 +335,7 @@ a {
 
     &-img {
         margin-top: 32px;
-        transition: all 0.5s linear;
+        transition: all 300ms ease-in-out;
 
         &>img {
             width: 100%;
