--- a/index.scss
+++ b/index.scss
@@ -96,7 +96,7 @@ a {
         align-items: center;
         border-radius: 4px;
         border: 1px solid rgba(0, 0, 0, 0.1);
-        padding: 8px;
+        padding: 8px 0 8px 8px;
         margin-right: 16px;
 
         &>input {
@@ -108,6 +108,7 @@ a {
             display: flex;
             justify-content: center;
             color: black;
+            padding: 0 8px;
         }
     }
 
@@ -163,7 +164,7 @@ a {
 
         &-item {
             display: flex;
-            width: calc(1200px / 10);
+            padding: 0 16px;
             text-align: center;
             height: 100%;
             align-items: center;
@@ -175,6 +176,10 @@ a {
 
             &>i {
                 margin-right: 4px;
+                font-size: 1.5em;
+            }
+            &.active {
+                background-color: white;
             }
         }
     }
@@ -447,25 +452,8 @@ a {
 // footer
 .footer {
     display: flex;
+    margin-top: 64px;
     padding: 0 calc((100% - 1200px) / 2);
     border-top: 1px solid #f1f1f1;
-    background-color: #f1f1f1;
-
-    &-list {
-        width: calc(1200px / 3);
-
-        &-item {
-            padding: 4px;
-            border: 1px solid white;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 16px 0;
-        }
-
-        &+.footer-list {
-            margin-left: 16px;
-        }
-    }
+    height: 320px;
 }
